# BattleShips

./: AbilityManager.cpp  AbilityManager.h  CMakeLists.txt  ConsoleRenderer.cpp  ConsoleRenderer.h  Exceptions.h  Game.cpp  Game.h  GameController.h  GameDisplay.h  SaveManager.cpp  SaveManager.h  UserInput.cpp  UserInput.h  commands.json  main.cpp
AbilityFolder/: Ability.h  CMakeLists.txt  DoubleDamage.cpp  DoubleDamage.h  RandomFire.cpp  RandomFire.h  Scanner.cpp  Scanner.h
AbilityFolder/AbilityFabricFolder/: AbilityFactory.h  CMakeLists.txt  DoubleDamageFactory.cpp  DoubleDamageFactory.h  RandomFireFactory.cpp  RandomFireFactory.h  ScannerFactory.cpp  ScannerFactory.h
FieldCombined/: CMakeLists.txt  Cell.cpp  Cell.h  GameField.cpp  GameField.h
GameStates/: CMakeLists.txt  GameEnemyState.cpp  GameEnemyState.h  GamePlayerState.cpp  GamePlayerState.h  GameState.h
Holders/: CMakeLists.txt  CoordHolder.h  CoordReader.h  InfoHolder.h  LogHolder.cpp  LogHolder.h
ShipCombined/: CMakeLists.txt  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h
